--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -1,6 +1,8 @@
 {
   "author": "Jumper Chen <jumperchen@zkoss.org> (https://keikai.io)",
-  "contributors": ["Tom Yeh <tomyeh@rikulo.org> (https://quire.io)"],
+  "contributors": [
+    "Tom Yeh <tomyeh@rikulo.org> (https://quire.io)"
+  ],
   "name": "jison2dart",
   "version": "0.1.0",
   "description": "Generate Bison-based parser in Dart via Jison",
