--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jison2dart
 version: 0.1.1
 description: > 
-  Generate Dart parsers using Jison
+  Generate Dart parsers using Jison based on Bison parser generator
 authors:
 - Jumper Chen <jumperchen@zkoss.org>
 - Tom Yeh <tomyeh@rikulo.org>
